--- a/project_homepage_final/Contribute.html
+++ b/project_homepage_final/Contribute.html
@@ -59,6 +59,9 @@
 					 스튜디오 앱에 넣어준다.<br>
 				5. 안드로이스 스튜디오앱에서 에뮬레이터를 다운받는다.<br>
 				6. 해당 파일을 실행 시킨다.<br>
+				7. 에뮬레이터에 사이드바에서 맨 아래 점 세게를 클릭한다.<br>
+				8. 한양대 에리카를 치고 set location을<br>
+				 누르면 현재 위치 주변 화장실 정보가 뜬다.
 			</div>
 		</div>
 		<div class = price-item>
