--- a/project_homepage_final/introduction.html
+++ b/project_homepage_final/introduction.html
@@ -36,7 +36,7 @@
     편의를 줄 수 있는 안산시 공중화장실 어플을 만들어보았습니다.<br>
     저희가 만든 앱의 기능으로는 우선 어플을 키면<br> 현재위치를 보여줍니다.<br>
     그리고 지도를 통해 어디가 가장 가까운 화장실인지<br> 알 수 있게됩니다.<br>
-    또한 화장실 마크를 클릭해보면 화장실의 정보를<br> 알 수 있게됩니다.<br>
+    또한 화장실 마크를 클릭해보면 화장실의 정보를<br> 알 수 있게됩니다. (구현예정이였지만 실패...)<br>
     혹시 API에 문제가 있거나 불편한 점이 있으면<br>
     lcs3623@naver.com으로 연락주시면 감사하겠습니다.<br>
     감사합니다.
